2015-09-27  Kirit Saelensminde  <kirit@felspar.com>
 Add digest and HMAC overloads for `std::vector<unsignec char>`.

2015-08-21  Kirit Saelensminde  <kirit@felspar.com>
 Moved the tagged string header.

2015-07-22  Kirit Saelensminde  <kirit@felspar.com>
 The performance counter now takes a variadic constructor to build the path that it will be recorded into.
 Changed the `jcursor` constructors to be properly variadic.

2015-06-20  Kirit Saelensminde  <kirit@felspar.com>
 Added a mechanism for setting modules that are part of a system. The log messages now make use of this so it's easier to track where log messages come from.

2015-06-19  Kirit Saelensminde  <kirit@felspar.com>
 * `fostlib::push_back` now accepts a `fostlib::json::array_t`.
 * Deprecate `fostlib::counter`.

2015-06-16  Kirit Saelensminde  <kirit@felspar.com>
 Use `std::rethrow_exception` to move an exception between threads.

2015-06-14  Kirit Saelensminde  <kirit@felspar.com>
 Added variadic versions of `fostlib::push_back` and `fostlib::insert`.

2015-06-10  Kirit Saelensminde  <kirit@felspar.com>
 Add coercions for ascii_string and utf8_string to json.

2015-06-03  Kirit Saelensminde  <kirit@felspar.com>
 We need libatomic if we're using gcc++ (or clang) for many programs so just have it included.

2015-05-30  Kirit Saelensminde  <kirit@felspar.com>
 Pretty up some common log patterns when using colour output.
 Added colour options to the `stdout` logger.

2015-05-25  Kirit Saelensminde  <kirit@felspar.com>
 Remove the `FOST_HAS_MOVE` define because with C++14 we don't need it.

2015-05-22  Kirit Saelensminde  <kirit@felspar.com>
 Test file names can now end in `.tests.cpp` as well as `-tests.cpp`.

2015-05-20  Kirit Saelensminde  <kirit@felspar.com>
 Removed internal uses of `boost::scoped_ptr`.
 Add SHA256 to the crypto wrappers.

2015-05-18  Kirit Saelensminde  <kirit@felspar.com>
 Replace all uses of `boost::filesystem::wpath` with `path`.
